CPM-1272 - UI - Next button - alignment issue CPM-1291 - Adjust "NEXT" button on Pivotal Study Page CPM-1294 - UI - unexpected white vertical line appears to the left side of the page

--- a/src/styles/_includes/layout/_content.scss
+++ b/src/styles/_includes/layout/_content.scss
@@ -23,12 +23,19 @@
     figcaption {
       font-size: 9px;
       line-height: 12px;
-      padding-left: 75px;
-      padding-top: 10px;
+      padding-left: 72px;
+      padding-top: 25px;
+
+      p {
+        margin: 0;
+        font-size: 10px;
+        letter-spacing: .03px;
+        line-height: 13px;
+      }
     }
 
     figure {
-      max-width: 93%;
+      max-width: 100%;
       margin: 0 auto;
       margin-bottom: 30px;
     }
