--- a/src/styles/_includes/pages/_template-2.scss
+++ b/src/styles/_includes/pages/_template-2.scss
@@ -48,6 +48,7 @@
 
     &__content {
       padding-left: 0;
+      max-width: 600px;
 
       *,
       * > * {
